2003-04-25  Ettore Perazzoli  <ettore@ximian.com>

	[#41059]

	* e-corba-storage.c (async_open_cb): Added a missing unref of the
	storage in the closure.
	(async_open_folder_idle): Add the pending open to the pending open
	list before calling asyncOpenFolder, instead of after.

2003-04-23  Not Zed  <NotZed@Ximian.com>

	* e-local-storage.c (load_folder): cast to remove warning.
	(construct): set a physiucal uri on the root folder, so we dont
	get warnings when we add it later.

2003-04-22  Anna Marie Dirks  <anna@ximian.com>

	* e-shell-settings-dialog.c (init): Add appropriate padding 
	to the Evolution Settings window. This is another bit of the 
	fix for #41392.

	* e-corba-config-page.c (e_corba_config_page_construct): Add 
	appropriate padding to the corba_config_page widget. Partial 
	fix for #41392.

2003-04-23  Anna Marie Dirks  <anna@ximian.com>

	* glade/e-folder-list.glade: replaced buttons with stock buttons
	and added HIG-blessed spacing. Fixes 41145.

2003-04-22  Anna Marie Dirks  <anna@ximian.com>
	
	* e-shortcuts-view.c
	(destroy_group_cb): Set the border width of the message dialog 
	to 6. Also corrected the capitalization for "Remove Shortcut 
	Dialog". Fixes 41569
	(show_new_group_dialog): Fixed the title of "Create New Shortcut
	Group" . Partially fixes 41038.
	(rename_shortcut_cb): Corrected the label capitalization for 
	Rename dialog. Fixes 41567.

2003-04-21  Chris Toshok  <toshok@ximian.com>

	* e-folder-list.c (e_folder_list_parse_xml): this should never
	happen unless you're really trying, but don't crash if the xml
	setting is malformed.

2003-04-21  Ettore Perazzoli  <ettore@ximian.com>

	* e-local-storage.c (create_folder_directory): Don't signal an
	error if mkdir() returns EEXIST.  This should at least help with
	situations like the one described in #40989.

2003-04-21  Anna Marie Dirks  <anna@ximian.com>

	* e-shell-folder-commands.c (delete_dialog): Corrected border 
	with for Delete Folder dialog. Fixes 41036. 