@@ -202,6 +202,7 @@ fill_corba_sequence_from_null_terminated_string_array (CORBA_sequence_CORBA_stri
 }
 
 
+#if 0
 /* Owner pinging.  */
 
 static gboolean
@@ -265,6 +266,7 @@ setup_owner_pinging (EvolutionShellComponent *shell_component)
 
 	priv->ping_timeout_id = g_timeout_add (PING_DELAY, owner_ping_callback, shell_component);
 }
+#endif
 
 
 /* CORBA interface implementation.  */
@@ -430,16 +432,20 @@ impl_setOwner (PortableServer_Servant servant,
 	}
 
 	if (ev->_major == CORBA_NO_EXCEPTION) {
+#if 0
 		BonoboObject *local_object;
+#endif
 
 		priv->owner_client = evolution_shell_client_new (shell);
 		g_signal_emit (shell_component, signals[OWNER_SET], 0, priv->owner_client, evolution_homedir);
 
+#if 0
 		/* Set up pinging of the shell (to realize if it's gone unexpectedly) when in the
 		   non-local case.  */
 		local_object = bonobo_object (ORBit_small_get_servant (shell));
 		if (local_object == NULL)
 			setup_owner_pinging (shell_component);
+#endif
 	}
 }
 
